# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  lint.yml
page_analyzer/: app.py  db.py  parser.py  url_utils.py  urls_repository.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
