[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["page_analyzer*"]

[tool.ruff]
line-length = 88
target-version = "py310"
